# folio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  fly.toml  justfile  package-lock.json  package.json  playwright.config.ts  spec.md
.cargo/: config.toml
.github/workflows/: deploy.yml  test.yml
ai_docs/: architecture.md  commands.md  conventions.md
cmd/server/: Cargo.toml  main.rs
decisions/: DEFAULTS.md
docs/: ATTRIBUTION.md  design-system.md
e2e/: accessibility.spec.ts  admin.spec.ts  ai-chat.spec.ts  fixtures.ts  hero-overflow.spec.ts  public-pages.spec.ts  responsive.spec.ts  resume.spec.ts
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
libs/site-core/: Cargo.toml  auth.rs  config.rs  error.rs  lib.rs  site_core.rs  state.rs  static_files.rs  test_password.rs
libs/site-core/ai/: anthropic_stream.rs  context.rs  mod.rs  prompt_templates.rs  prompts.rs  rate_limit.rs  stop_reason.rs  types.rs
libs/site-core/db/: config.rs  mod.rs  schema.rs  seed.rs
libs/site-core/db/fixtures/: live_profile.json
libs/site-core/middleware/: global_rate_limit.rs  mod.rs  page_hits.rs
libs/site-core/models/: agent.rs  article.rs  education.rs  experience.rs  faq.rs  gaps.rs  instructions.rs  link.rs  mod.rs  page_hits.rs  profile.rs  project.rs  skill.rs  values.rs
libs/site-core/routes/: agents.rs  ai.rs  articles.rs  education.rs  experience.rs  faq.rs  links.rs  mod.rs  profile.rs  projects.rs  skills.rs
libs/site-core/routes/admin/: agents.rs  articles.rs  dashboard.rs  education.rs  experience.rs  faq.rs  gaps.rs  instructions.rs  links.rs  mod.rs  profile.rs  projects.rs  skills.rs  values.rs
libs/site-core/tests/: admin_dashboard_tests.rs  auth_tests.rs  test_ai_chat_buffered_contract.rs  test_ai_chat_endpoint.rs  test_ai_cross_cutting.rs  test_ai_endpoints.rs  test_ai_fit_endpoint.rs  test_articles.rs  test_config.rs  test_education.rs  test_experience.rs  test_faq.rs  test_global_rate_limit.rs  test_health.rs  test_links.rs  test_llm07a_private_field_drop.rs  test_llm_audit_hardening.rs  test_profile.rs  test_projects.rs  test_schema.rs  test_skills.rs
libs/site-core/tests/common/: ai_mock.rs  mod.rs  test_password.rs
migrations/: 001_initial_schema.sql  002_agents.sql  003_page_hits.sql  004_profile_pitch_split.sql  005_site_config.sql
(+72 files in other folders)
