[package]
name = "folio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "folio"
path = "main.rs"

[dependencies]
site-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
rig-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
