[package]
name = "site-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
rig-core = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
schemars = { workspace = true }
dotenvy = { workspace = true }
argon2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
